--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -7,5 +7,22 @@
 <body>
     <h1>Banana Bread Recipe</h1>
     <img src="../images/bananabread.jpg" width = 300px height = auto>
+    <p></p>
+    <h2>My Favorite Whole 30 Banana Bread</h2>
+    <p>This is my favorite Whole 30 compliant banana bread. There's not many ingredients
+        and they're all natural. It's really easy to make and it really hits the spot when
+        you're craving something sweet while doing Whole 30.
+    </p>
+    <p><h3>Here is a list of ingredients you will need to make this banana bread.</h3>
+        <ul>
+            <li>2 1/2 cups almond flour</li>
+            <li>1/2 tsp baking soda</li>
+            <li>2 eggs</li>
+            <li>3 tbsp melted coconut oil</li>
+            <li>1 tsp alcohol free vanilla extract</li>
+            <li>4 very ripe bananas</li>
+            <li>1/3 cup chopped walnuts</li>
+        </ul>
+    </p>
 </body>
 </html>
