--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -13,7 +13,7 @@
         and they're all natural. It's really easy to make and it really hits the spot when
         you're craving something sweet while doing Whole 30.
     </p>
-    <p><h3>Here is a list of ingredients you will need to make this banana bread.</h3>
+    <p><h3>Here is a list of ingredients you will need to make this banana bread</h3>
         <ul>
             <li>2 1/2 cups almond flour</li>
             <li>1/2 tsp baking soda</li>
@@ -23,6 +23,20 @@
             <li>4 very ripe bananas</li>
             <li>1/3 cup chopped walnuts</li>
         </ul>
+    </p>
+    <p><h3>Steps to make this banana bread</h3></p>
+    <p>
+        <ol>
+            <li>Preheat the oven to 175 degrees Celsius (350 degrees Fahrenheit)</li>
+            <li>In a mixing bowl combine the baking soda and almond flour</li>
+            <li>Next add in the eggs, melted coconut oil, vanilla and 4 bananas, ensure all of the ingredients are mixed well</li>
+            <li>Stir in the walnuts</li>
+            <li>Line a baking tin with parchment paper (this will make your life a lot easier when trying to remove the bread after baking)</li>
+            <li>Bake for 50-55 minutes</li>
+            <li>IInsert a tooth pick or skewer into the bread and ensure it comes out clean before removing the bread from the oven. Let it cool for a few minutes before removing from the baking tin. </li>
+            <li>Enjoy!</li>
+
+        </ol>
     </p>
 </body>
 </html>
