fixed a typo in step 7 of the recipe steps

--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -33,7 +33,7 @@
             <li>Stir in the walnuts</li>
             <li>Line a baking tin with parchment paper (this will make your life a lot easier when trying to remove the bread after baking)</li>
             <li>Bake for 50-55 minutes</li>
-            <li>IInsert a tooth pick or skewer into the bread and ensure it comes out clean before removing the bread from the oven. Let it cool for a few minutes before removing from the baking tin. </li>
+            <li>Insert a tooth pick or skewer into the bread and ensure it comes out clean before removing the bread from the oven. Let it cool for a few minutes before removing from the baking tin. </li>
             <li>Enjoy!</li>
 
         </ol>
