--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-<a href="recipes/banana-bread.html">Banana Bread</a>
+    <ul>
+<li><a href="recipes/banana-bread.html">Banana Bread</a></li>
+<li><a href="recipes/grilled-charlie.html">Grilled Charlie</a></li>
+    </ul>
     
 </body>
 </html>
