--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
 <li><a href="recipes/banana-bread.html">Banana Bread</a></li>
 <li><a href="recipes/grilled-charlie.html">Grilled Charlie</a></li>
-<li><a href="/recipes/hotdog.html">Hot Dog</a></li>
+<li><a href="recipes/hotdog.html">Hot Dog</a></li>
     </ul>
     
 </body>
